--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div class="header__inner">
                 <div class="header__side-left">
                     <a href="index.html" class="header__logo">
-                        <img src="/images/logo.png" alt="">
+                        <img src="images/logo.png" alt="">
                     </a>
                     <ul class="lang-switcher">
                         <a href="#" class="lang-ru">
@@ -164,8 +164,8 @@
                     <a href="#" class="footer__link">Cookies Settings</a>
                 </div>
                 <div class="footer__apps">
-                    <a href="#"><img class="footer__app" src="/images/google-play.png" alt="google"></a>
-                    <a href="#"><img class="footer__app" src="/images/app-store.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
+                    <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
                 </div>
                 <button class="footer__btn"></button>
             </div>
