Correction of images in `main.html`

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
       <div class="header__inner">
         <div class="header__side-left">
           <a href="index.html" class="header__logo">
-            <img src="/images/logo.png" alt="">
+            <img src="images/logo.png" alt="">
           </a>
           <ul class="lang-switcher">
             <a href="#" class="lang-ru">
@@ -102,7 +102,7 @@
             </p>
           </div>
           <div class="post__main-second__side">
-            <img class="post__main-img" src="/images/posts/1.png" alt="img">
+            <img class="post__main-img" src="images/posts/1.png" alt="img">
           </div>
         </div>
 
@@ -202,7 +202,7 @@
             </p>
           </div>
           <div class="post__main-second__side">
-            <img class="post__main-img" src="/images/posts/2.png" alt="img">
+            <img class="post__main-img" src="images/posts/2.png" alt="img">
           </div>
         </div>
 
@@ -265,8 +265,8 @@
           <a href="#" class="footer__link">Cookies Settings</a>
         </div>
         <div class="footer__apps">
-          <a href="#"><img class="footer__app" src="/images/google-play.png" alt="google"></a>
-          <a href="#"><img class="footer__app" src="/images/app-store.png" alt="google"></a>
+          <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
+          <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
         </div>
         <button class="footer__btn"></button>
       </div>
