Delete some lines in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
   </section>
 
   <section class="sideMenu">
-    <div class=" sideMenu__inner" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
+    <div class=" sideMenu__inner">
       <ul class="sideMenu__ico-box">
         <li class="sideMenu__ico">
           <a href="#" class="sideMenu__ico-link">
