Add new block in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -114,60 +114,40 @@
     </div>
   </section>
 
-  <section class="intro">
-    <div class="container">
-      <div class="intro__wrapper">
-        <div class="intro__content">
-          <h1 class="intro__slogan">Не знаете, как повысить свою финансовую грамотность? Или не можете
-            уследить за вашими деньгами?
-          </h1>
-          <p class="intro__text">Тогда вы пришли туда куда нужно! Здесь мы предоставляем вам услуги по
-            учету
-            личных расходов и доходов, планирование бюджета и сбора статистики. </p>
-          <p class="intro__text">А также у нас действует скидки до 50% на все виды наших услуг.
-            Торопитесь,
-            скидка будет действительна до 01.03.21 года!</p>
-          <a href="sign-up.html" class="intro__btn">Регистрация</a>
-        </div>
-      </div>
-    </div>
-    <div class="intro__img">
-      <img src="images/bg-intro.png" alt="bg">
-    </div>
-  </section>
-
-  <section class="main">
+  <section class="main main--third ">
     <div class="container">
       <div class="post__box">
-        <div class="post__box-wrapper">
-
-          <div class="post__content">
-            <h1 class="post__title">Кто мы такие?</h1>
-            <p class="post__text">Мы компания, которая помогает вам разобраться в финансовой грамотности и
-              помочь
-              вам сохранить или сэкономить ваши денежные средства.
-            </p>
-            <p class="post__text">В первую очередь вы должны понимать, что финансовая грамотность – это
-              знания и
-              навыки, которые помогают принимать взвешенные и разумные решения в отношении финансов. Чтобы
-              считаться финансово грамотным, нужно разбираться в основных финансовых понятиях,
-              ориентироваться
-              в
-              услугах финансовых институтов и использовать их с осознанием плюсов, минусов и рисков,
-              правильно
-              оценивать ситуацию на рынке, управлять финансами: вести бюджет, планировать траты,
-              накапливать
-              сбережения и по возможности избегать долгов.
-              И поэтому обращаясь к нам, вы можете планировать свой бюджет, смотреть на ваши расходы и
-              доходы
-              за
-              год, месяц, либо неделю.
-            </p>
+        <h1 class="post__title">Мой баланс</h1>
+        <div class="post__currency-box__inner">
+          <div class="post__currency-box">
+            <div class="post__currency-kzt">
+              <div class="post__currency-value">7 800 699 KZT</div>
+              <div class="post__currency-wrapper">
+                <a href="#" class="post__currency-btn">ПОПОЛНИТЬ</a>
+                <div class="post__currency-country-kz">KZT</div>
+              </div>
+            </div>
           </div>
-          <div class="post__img">
-            <img src="images/post-img1.png" alt="post">
+          <div class="post__currency-box">
+            <div class="post__currency-kzt">
+              <div class="post__currency-value">1 563 985 RUB</div>
+              <div class="post__currency-wrapper">
+                <a href="#" class="post__currency-btn">ПОПОЛНИТЬ</a>
+                <div class="post__currency-country-ru">RUB</div>
+              </div>
+            </div>
+          </div>
+          <div class="post__currency-box">
+            <div class="post__currency-kzt">
+              <div class="post__currency-value">1 589 USD</div>
+              <div class="post__currency-wrapper">
+                <a href="#" class="post__currency-btn">ПОПОЛНИТЬ</a>
+                <div class="post__currency-country-us">USD</div>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
 
       <div class="post__box">
