--- a/profile.html
+++ b/profile.html
@@ -147,156 +147,31 @@
             </div>
           </div>
         </div>
-
       </div>
 
       <div class="post__box">
-        <div class="post__box-wrapper">
-          <div class="post__content">
-            <h1 class="post__title">наша история</h1>
-            <p class="post__text">Наша компания была основана в 1996 году, а в сеть мы вышли в 2000 году. Мы
-              были не очень популярны, но в дальнейшем к нам стали обращаться все больше и больше людей. И
-              из-за этого от маленькой компании по обучению финансовой грамотности мы превратились в
-              большую
-              компанию.
-            </p>
-          </div>
-          <div class="post__img">
-            <img src="images/post-img2.png" alt="post">
-          </div>
-        </div>
-      </div>
-
-      <div class="post__box">
-        <div class="post__slider-title">
-          <h1 class="post__title">наши услуги</h1>
-          <a href="services.html" class="post__more">ПОДРОБНЕЕ</a>
-        </div>
-        <div class="post__slider">
-          <div class="post__slider-item">
-            <img src="images/slider/1.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Составление личного финансового плана
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/2.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Консультация со специалистами
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/3.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Помощь в получении финансирования
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/2.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Бизнес планирование, составление бизнес плана
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/1.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Составление личного финансового плана
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/2.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Консультация со специалистами
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/3.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Помощь в получении финансирования
-            </h2>
-          </div>
-
-          <div class="post__slider-item">
-            <img src="images/slider/2.png" alt="img" class="post__slider-bg">
-            <h2 class="post__slider-text">
-              Бизнес планирование, составление бизнес плана
-            </h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="post__box">
-        <h1 class="post__title">почему выбирают нас?</h1>
-        <img src="images/img.png" alt="" class="post__img-full">
-      </div>
-
-      <div class="post__box">
-        <h1 class="post__title">отзывы наших клиентов</h1>
-        <div class="post__slider-reviews">
-          <div class="post__reviews-item">
-            <div class="post__reviews__name-box">
-              <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
-              <div class="post__reviews__client">
-                <div class="post__reviews-name">Имя Фамилия</div>
-                <div class="post__reviews-rating">Оценка: положительная</div>
-              </div>
+        <h1 class="post__title">Прибыль</h1>
+        <div class="post__graph__inner">
+          <div class="post__graph-box__inner">
+            <div class="post__graph-box">
+              <div class="post__graph-box-text">Общий процент прибыли</div>
+              <div class="post__graph-box-percent">25%</div>
             </div>
-            <div class="post__reviews-text">
-              Очень нравится данный сайт. Теперь мне реально очень удобно смотреть за моими финансами!
-              Спасибо.
+            <div class="post__graph-box">
+              <div class="post__graph-box-text post__graph-box-text--kz">процент прибыли kzt</div>
+              <div class="post__graph-box-percent">5%</div>
             </div>
-          </div>
-
-          <div class="post__reviews-item">
-            <div class="post__reviews__name-box">
-              <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
-              <div class="post__reviews__client">
-                <div class="post__reviews-name">Имя Фамилия</div>
-                <div class="post__reviews-rating">Оценка: положительная</div>
-              </div>
+            <div class="post__graph-box">
+              <div class="post__graph-box-text post__graph-box-text--ru">процент прибыли RUB</div>
+              <div class="post__graph-box-percent">15%</div>
             </div>
-            <div class="post__reviews-text">
-              Очень нравится данный сайт. Теперь мне реально очень удобно смотреть за моими финансами!
-              Спасибо.
-            </div>
-          </div>
-
-          <div class="post__reviews-item">
-            <div class="post__reviews__name-box">
-              <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
-              <div class="post__reviews__client">
-                <div class="post__reviews-name">Имя Фамилия</div>
-                <div class="post__reviews-rating">Оценка: положительная</div>
-              </div>
-            </div>
-            <div class="post__reviews-text">
-              Очень нравится данный сайт. Теперь мне реально очень удобно смотреть за моими финансами!
-              Спасибо.
-            </div>
-          </div>
-
-          <div class="post__reviews-item">
-            <div class="post__reviews__name-box">
-              <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
-              <div class="post__reviews__client">
-                <div class="post__reviews-name">Имя Фамилия</div>
-                <div class="post__reviews-rating">Оценка: положительная</div>
-              </div>
-            </div>
-            <div class="post__reviews-text">
-              Очень нравится данный сайт. Теперь мне реально очень удобно смотреть за моими финансами!
-              Спасибо.
+            <div class="post__graph-box">
+              <div class="post__graph-box-text post__graph-box-text--us">процент прибыли USD</div>
+              <div class="post__graph-box-percent">1%</div>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
