Finished a block with percentages in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -157,7 +157,7 @@
               <div class="post__graph-box-text">Общий процент прибыли</div>
               <div class="post__graph-box-percent">25%</div>
             </div>
-            <div class="post__graph-box">
+            <div class="post__graph-box post__graph-box--active">
               <div class="post__graph-box-text post__graph-box-text--kz">процент прибыли kzt</div>
               <div class="post__graph-box-percent">5%</div>
             </div>
@@ -169,6 +169,19 @@
               <div class="post__graph-box-text post__graph-box-text--us">процент прибыли USD</div>
               <div class="post__graph-box-percent">1%</div>
             </div>
+          </div>
+
+          <div class="post__graph-graph__box">
+            <div class="post__graph-graph__text-inner">
+              <div class="post__graph-graph__text">график прибыли kzt</div>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
+                сегодня</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+            </div>
+            <img src="/images/graph/1.png" alt="" class="post__graph-graph-img">
+            <div class="cursor"></div>
           </div>
         </div>
       </div>
