Fix image in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -180,7 +180,7 @@
               <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
               <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
             </div>
-            <img src="/images/graph/1.png" alt="" class="post__graph-graph-img">
+            <img src="images/graph/1.png" alt="" class="post__graph-graph-img">
             <div class="cursor"></div>
           </div>
         </div>
