Add new block in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -185,8 +185,93 @@
           </div>
         </div>
       </div>
-    </div>
+
+      <div class="post__box-inner-50">
+        <div class="post__box post__box--50">
+          <div class="post__box-inner">
+            <div class="post__title">ТРАНЗАКЦИИ</div>
+            <div class="post___subtext">История транзакций </div>
+            <table class="post__table">
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">01.01.21 00:00</th>
+                <th class="post__transactions--price">+100 000 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">02.01.21 12:43</th>
+                <th class="post__transactions--price">+50 500 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">05.01.21 18:48</th>
+                <th class="post__transactions--price">-5 000 rub</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">09.01.21 21:27</th>
+                <th class="post__transactions--price">+100 USD</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">11.01.21 15:36</th>
+                <th class="post__transactions--price">+325 500 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">18.01.21 17:27</th>
+                <th class="post__transactions--price">-50 000 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">26.01.21 13:45</th>
+                <th class="post__transactions--price">+50 USD</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">29.01.21 21:27</th>
+                <th class="post__transactions--price">-100 USD</th>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class="post__box post__box--50">
+          <div class="post__box-inner">
+            <div class="post__title">ПЕРЕВОДЫ</div>
+            <div class="post___subtext">История транзакций </div>
+            <table class="post__table">
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">01.01.21 00:00</th>
+                <th class="post__transactions--price">+100 000 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">02.01.21 12:43</th>
+                <th class="post__transactions--price">+50 500 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">05.01.21 18:48</th>
+                <th class="post__transactions--price">-5 000 rub</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">09.01.21 21:27</th>
+                <th class="post__transactions--price">+100 USD</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">11.01.21 15:36</th>
+                <th class="post__transactions--price">+325 500 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">18.01.21 17:27</th>
+                <th class="post__transactions--price">-50 000 kzt</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">26.01.21 13:45</th>
+                <th class="post__transactions--price">+50 USD</th>
+              </tr>
+              <tr class="post__table-bb">
+                <th class="post__transactions--time">29.01.21 21:27</th>
+                <th class="post__transactions--price">-100 USD</th>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+
   </section>
+
 
   <section class="footer">
     <div class="container">
