Add expenses and income block in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -267,6 +267,65 @@
         </div>
       </div>
 
+      <div class="post__box">
+        <h1 class="post__title">Расходы и доходы</h1>
+        <div class="post__graph__inner">
+          <div class="post__graph-box__inner">
+            <div class="post__graph-box">
+              <div class="post__graph-box-text">Общее количество расходов и доходов</div>
+              <div class="post__graph-box-percent-wrapper">
+                <div class="post__graph-box-percent post__graph-box-percent--downArrows">25%</div>
+                <div class="post__graph-box-percent post__graph-box-percent--upArrows">25%</div>
+              </div>
+            </div>
+            <div class="post__graph-box post__graph-box--active">
+              <div class="post__graph-box-text post__graph-box-text--kz">Общее количество расходов и доходов в kzt</div>
+              <div class="post__graph-box-percent-wrapper">
+                <div class="post__graph-box-percent post__graph-box-percent--downArrows">10 589 654</div>
+                <div class="post__graph-box-percent post__graph-box-percent--upArrows">20 569 560</div>
+              </div>
+            </div>
+            <div class="post__graph-box">
+              <div class="post__graph-box-text post__graph-box-text--ru">Общее количество расходов и доходов в RUB</div>
+              <div class="post__graph-box-percent-wrapper">
+                <div class="post__graph-box-percent post__graph-box-percent--downArrows">1 896 325</div>
+                <div class="post__graph-box-percent post__graph-box-percent--upArrows">5 998 365</div>
+              </div>
+            </div>
+            <div class="post__graph-box">
+              <div class="post__graph-box-text post__graph-box-text--us">Общее количество расходов и доходов в USD</div>
+              <div class="post__graph-box-percent-wrapper">
+                <div class="post__graph-box-percent post__graph-box-percent--downArrows">10 569</div>
+                <div class="post__graph-box-percent post__graph-box-percent--upArrows">15 896</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="post__graph-graph__box">
+            <div class="post__graph-graph__text-inner">
+              <div class="post__graph-graph__text">График количества <br> расходов и <br> доходов KZT</div>
+              <div class="post__graph-indicators">
+                <div class="post__graph-indicators-yellow">
+                  доход
+                </div>
+                <div class="post__graph-indicators-brown">
+                  расход
+                </div>
+              </div>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
+                сегодня</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--3month">за 3 месяца</a>
+              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+            </div>
+            <img src="images/graph/2.png" alt="" class="post__graph-graph-img">
+            <div class="cursor cursor--yellow"></div>
+            <div class="cursor cursor--brown"></div>
+          </div>
+        </div>
+      </div>
+
   </section>
 
 
