Add last block in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -326,6 +326,16 @@
         </div>
       </div>
 
+
+      <div class="post__box">
+        <h1 class="post__title">поддержка</h1>
+        <p class="post__subtitle">Если у вас возникли трудности, то позвоните нам по номеру телефона: +7777 452 89
+          89<br>
+          Или отправьте письмо на нашу почту: finanlity@gmail.com<br>
+          Мы постараемся ответить моментально.
+        </p>
+      </div>
+
   </section>
 
 
