Add currency switcher in `main.js`

--- a/profile.html
+++ b/profile.html
@@ -235,18 +235,50 @@
             <div class="post__transfer-wrapper">
               <div class="post__transfer">
                 <input type="text" class="post__transfer-input" placeholder="СУММА">
-                <div class="post__transfer-value post__transfer-value--ru">RUB</div>
+                <div class="post__transfer-value post__transfer-value-ru post__transfer-value-ru--active">RUB</div>
+                <div class="post__transfer-value post__transfer-value-us post__transfer-value-us--nactive">USD</div>
+                <div class="post__transfer-value post__transfer-value-kz post__transfer-value-kz--nactive">KZT</div>
+                <div class="post__transfer-value_list">
+                  <div
+                    class="post__transfer-value post__transfer-value-ru post__transfer-value-ru__list post__transfer-value__list post__transfer-value-ru_list--nactive">
+                    RUB
+                  </div>
+                  <div
+                    class="post__transfer-value post__transfer-value-us post__transfer-value-us__list post__transfer-value__list post__transfer-value-us_list--active">
+                    USD
+                  </div>
+                  <div
+                    class="post__transfer-value post__transfer-value-kz post__transfer-value-kz__list post__transfer-value__list post__transfer-value-kz_list--active">
+                    KZT
+                  </div>
+                </div>
               </div>
 
               <div class="post__transfer">
                 <input type="text" class="post__transfer-input" placeholder="СУММА">
-                <div class="post__transfer-value post__transfer-value--us">USD</div>
+                <div class="post__transfer-value post__transfer-value-ru post__transfer-value-ru--nactive">RUB</div>
+                <div class="post__transfer-value post__transfer-value-us post__transfer-value-us--active">USD</div>
+                <div class="post__transfer-value post__transfer-value-kz post__transfer-value-kz--nactive">KZT</div>
+                <div class="post__transfer-value_list">
+                  <div
+                    class="post__transfer-value post__transfer-value-ru post__transfer-value-ru__list post__transfer-value__list post__transfer-value-ru_list--active">
+                    RUB
+                  </div>
+                  <div
+                    class="post__transfer-value post__transfer-value-us post__transfer-value-us__list post__transfer-value__list post__transfer-value-us_list--nactive">
+                    USD
+                  </div>
+                  <div
+                    class="post__transfer-value post__transfer-value-kz post__transfer-value-kz__list post__transfer-value__list post__transfer-value-kz_list--active">
+                    KZT
+                  </div>
+                </div>
               </div>
             </div>
             <div class="post___subtext">ПЕРЕВОД МЕЖДУ БАНКОВСКИМИ КАРТАМИ</div>
             <div class="post__transfer-card">
               <input type="text" class="post__transfer-input post__transfer-input--100" placeholder="Введите сумму">
-              <div class="post__transfer-value post__transfer-value--kz">KZT</div>
+              <div class="post__transfer-value post__transfer-value-kz">KZT</div>
             </div>
             <input type="text" class="post__transfer-input post__transfer-input--100"
               placeholder="Укажите номер банковской карты для перевода денег">
