Add slow scrolling in `profile.html`

--- a/profile.html
+++ b/profile.html
@@ -60,10 +60,10 @@
   </section>
 
   <section class="sideMenu">
-    <div class=" sideMenu__inner">
+    <div class="sideMenu__inner" id="menu">
       <ul class="sideMenu__ico-box">
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#myBalance" class="sideMenu__ico-link">
             <img src="images/ico/wallet.svg" alt="" class="sideMenu__ico-img">
             <div class="sideMenu__ico-text__box">
               <p class="sideMenu__text">Мой денежный баланс</p>
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#profit" class="sideMenu__ico-link">
             <img src="images/ico/exchange.svg" alt="" class="sideMenu__ico-img">
             <div class="sideMenu__ico-text__box">
               <p class="sideMenu__text">Прибыль</p>
@@ -81,25 +81,25 @@
           </a>
         </li>
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#profit" class="sideMenu__ico-link">
             <img src="images/ico/profits.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">График прибыли</span>
           </a>
         </li>
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#transaction" class="sideMenu__ico-link">
             <img src="images/ico/coins.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Транзакции</span>
           </a>
         </li>
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#transfer" class="sideMenu__ico-link">
             <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Переводы</span>
           </a>
         </li>
         <li class="sideMenu__ico">
-          <a href="#" class="sideMenu__ico-link">
+          <a href="#support" class="sideMenu__ico-link">
             <img src="images/ico/support.svg" alt="" class="sideMenu__ico-img">
             <span class="sideMenu__text">Тех. Поддержка </span>
           </a>
@@ -114,9 +114,9 @@
     </div>
   </section>
 
-  <section class="main main--third ">
+  <section class="main main--third" id="fullpage">
     <div class="container">
-      <div class="post__box">
+      <div class="post__box" id='myBalance'>
         <h1 class="post__title">Мой баланс</h1>
         <div class="post__currency-box__inner">
           <div class="post__currency-box">
@@ -149,7 +149,7 @@
         </div>
       </div>
 
-      <div class="post__box">
+      <div class="post__box" id='profit'>
         <h1 class="post__title">Прибыль</h1>
         <div class="post__graph__inner">
           <div class="post__graph-box__inner">
@@ -186,7 +186,7 @@
         </div>
       </div>
 
-      <div class="post__box-inner-50">
+      <div class="post__box-inner-50" id='transaction'>
         <div class="post__box post__box--50">
           <div class="post__box-inner">
             <div class="post__title">ТРАНЗАКЦИИ</div>
@@ -228,7 +228,7 @@
           </div>
         </div>
 
-        <div class="post__box post__box--50">
+        <div class="post__box post__box--50" id='transfer'>
           <div class="post__box-inner">
             <div class="post__title">ПЕРЕВОДЫ</div>
             <div class="post___subtext">ПЕРЕВОД МЕЖДУ СЧЕТАМИ</div>
@@ -299,7 +299,7 @@
         </div>
       </div>
 
-      <div class="post__box">
+      <div class="post__box" id='expenses'>
         <h1 class="post__title">Расходы и доходы</h1>
         <div class="post__graph__inner">
           <div class="post__graph-box__inner">
@@ -359,7 +359,7 @@
       </div>
 
 
-      <div class="post__box">
+      <div class="post__box" id='support'>
         <h1 class="post__title">поддержка</h1>
         <p class="post__subtitle">Если у вас возникли трудности, то позвоните нам по номеру телефона: +7777 452 89
           89<br>
