Fixed some bugs due to adaptation

--- a/profile.html
+++ b/profile.html
@@ -354,8 +354,8 @@
               <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
             </div>
             <img src="images/graph/2.png" alt="" class="post__graph-graph-img">
-            <div class="cursor cursor--yellow"></div>
-            <div class="cursor cursor--brown"></div>
+            <div class="cursor--yellow"></div>
+            <div class="cursor--brown"></div>
           </div>
         </div>
       </div>
