--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </nav>
                 <nav class="footer__nav">
                     <a href="reviews.html" class="footer__nav-link">Отзывы</a>
-                    <a href="#" class="footer__nav-link">Личный кабинет</a>
+                    <a href="profile.html" class="footer__nav-link">Личный кабинет</a>
                     <a href="#" class="footer__nav-link">Вопросы и ответы</a>
                     <a href="#" class="footer__nav-link">Наша история</a>
                 </nav>
