Fixed the slider in reviews block

--- a/reviews.html
+++ b/reviews.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="post__box">
         <h1 class="post__title">отзывы наших клиентов</h1>
-        <div class="post__slider-reviews">
+        <div class="post__slider-reviews-1">
           <div class="post__reviews-item">
             <div class="post__reviews__name-box">
               <img src="https://via.placeholder.com/75" alt="" class="post__reviews-avatar">
