Add modal window

--- a/index.html
+++ b/index.html
@@ -19,6 +19,43 @@
 
 <body>
 
+    <section class="modal">
+        <div class="modal__wrapper">
+            <div class="modal__box">
+                <button class="modal__close"></button>
+                <div class="modal__inner">
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+                    </a>
+
+                    <a href="#" class="modal__link">
+                        <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="header">
         <div class="container">
             <div class="header__inner">
