--- a/reviews.html
+++ b/reviews.html
@@ -19,6 +19,83 @@
 
 <body>
 
+  <section class="modal">
+    <div class="modal__wrapper">
+      <div class="modal__box">
+        <button class="modal__close"></button>
+        <div class="modal__inner">
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/facebook.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/pinterest.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/instagram.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/telegram.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/twitter.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/vk.svg" alt="">
+          </a>
+
+          <a href="#" class="modal__link">
+            <img class="modal__img" src="images/ico/modal/copy 1.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="header">
+    <div class="container">
+      <div class="header__inner">
+        <div class="header__side-left">
+          <a href="index.html" class="header__logo">
+            <img src="images/logo.png" alt="">
+          </a>
+          <ul class="lang-switcher">
+            <a href="#" class="lang-ru">
+              <li>RU</li>
+            </a>
+            <a href="#" class="lang-en">
+              <li>EN</li>
+            </a>
+          </ul>
+        </div>
+        <div class="header__side-center">
+          <nav class="header__nav">
+            <a href="about.html" class="header__nav-link">О НАC</a>
+            <a href="services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
+            <a href="main.html" class="header__nav-link">ГЛАВНАЯ</a>
+            <a href="reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
+          </nav>
+        </div>
+        <div class="header__side-right">
+          <a href="sign-in.html" class="header__login">АВТОРИЗАЦИЯ</a>
+          <a href="#" class="profile__avatar">
+            <img src="https://via.placeholder.com/70" alt="">
+          </a>
+          <div class="header__search">
+            <img src="images/ico/loupe.svg" alt="">
+          </div>
+          <label class="header__search-box">
+            <input type="search" class="search__box" placeholder="Введите ключевое слово">
+          </label>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="header">
     <div class="container">
       <div class="header__inner">
