Added functions to the modal window

--- a/main.html
+++ b/main.html
@@ -141,7 +141,7 @@
       <div class="post__box">
         <div class="post__main-title">
           <h1 class="post__title">блог</h1>
-          <a href="services.html" class="post__share">ПОДЕЛИТСЯ</a>
+          <div class="post__share">ПОДЕЛИТСЯ</div>
         </div>
         <h2 class="post__main-pg">Почему важна финансовая грамотность</h2>
         <p class="post__main-text">
@@ -238,7 +238,7 @@
       <div class="post__box">
         <div class="post__main-title">
           <h1 class="post__title">блог</h1>
-          <a href="services.html" class="post__share">ПОДЕЛИТСЯ</a>
+          <div class="post__share">ПОДЕЛИТСЯ</div>
         </div>
         <h2 class="post__main-pg">финансовая грамотность в россии</h2>
         <p class="post__main-text">
