Fixed `.footer__social` class in html files

--- a/sign-in.html
+++ b/sign-in.html
@@ -187,15 +187,17 @@
                     <a href="#" class="footer__nav-link">Вопросы и ответы</a>
                     <a href="#" class="footer__nav-link">Наша история</a>
                 </nav>
-                <div class="footer__social">
-                    <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
-                    <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
-                    <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
-                </div>
-                <div class="footer__social">
-                    <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
-                    <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
-                    <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                <div class="footer__social-box">
+                    <div class="footer__social">
+                        <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                    </div>
+                    <div class="footer__social">
+                        <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
+                        <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                    </div>
                 </div>
                 <div class="footer__contacts">
                     <h1 class="footer__contacts-title">
